[package]
name = "firecore-input"
version = "0.3.0-beta.3"
authors = ["Rhys Holloway <rhyswilliamholloway@gmail.com>"]
edition = "2018"

[features]
default = ["input"]
input = ["macroquad"]

[dependencies]

serde = { version = "1.0", features = ["derive"] }

ahash = { version = "0.7", features = ["serde"] }

macroquad = { version = "0.3.0-alpha.17", optional = true }